<resources>
    <string name="app_name">Apollo</string>
    <string name="PasswordTextEdit" />
    <string name="EmailTextEdit" />
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="logo">Logo</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_sign_in">Already registered, sign in!</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register.</string>
    <string name="no">No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_logo">Splash screen logo</string>
    <string name="astronaut_name">astronaut_name</string>
    <string name="astronaut_craft">astronaut_craft</string>
    <string name="todo">TODO</string>
    <string name="laguage_change_icon_for_english">Laguage change icon for English</string>
    <string name="laguage_change_icon_for_serbian">Laguage change icon for Serbian</string>
    <string name="powerd_by_bane">Powerd by Bane</string>
    <string name="textview">TextView</string>
    <string name="string_eng">This application is a project for the Mobile Application Programming course at the FTN in Čačak. The creator of this application is Lazar Milošević, index number 273/2021. The world of luxury cars is a realm of engineering craftsmanship and sophistication, where each BMW model represents a marvel of technological innovation. Among them, the BMW 7 Series stands as a pinnacle of luxury, with its advanced technologies and powerful engine, making a statement in the urban landscape. The BMW M8 is another symbol of prestige, distinguished by its exceptional power and elegant design, epitomizing the essence of a sports spirit. These models, like the BMW X7, BMW M5, and BMW Alpina B7, represent the zenith of automotive artistry, where every detail offers insight into meticulously crafted performance and a moment of unparalleled driving pleasure.</string>
    <string name="string_srb">Ova aplikacija je projekat za predmet Programiranje mobilnih aplikacija, na FTN-u u Čačku. Kreator ove aplikacije je Lazar Milošević, indeks 273/2021. Svijet luksuznih automobila je domen inženjerskog umijeća i sofisticiranosti, gdje svaki model BMW-a predstavlja čudo tehnološke inovativnosti. Među njima, BMW 7 Series stoji kao vrhunac luksuza, sa svojim naprednim tehnologijama i moćnim motorom, koji se ističe u urbanom pejzažu. BMW M8 je još jedan simbol prestiža, koji se ističe svojom izuzetnom snagom i elegantnim dizajnom, simbolizirajući vrhunac sportskog duha. Ovi modeli, poput BMW X7, BMW M5 i BMW Alpina B7, predstavljaju vrhunac automobilske umetnosti, gdje svaki detalj nudi uvid u pažljivo oblikovane performanse i trenutak neprevaziđenog uživanja u vožnji.</string>
    <string name="iss_photo">ISS photo</string>
    <string name="shenzou15_photo">Shenzou15 photo</string>
    <string name="app_info">App Info</string>
</resources>