<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="BMWs"
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_directions_car_24"/>
    <item android:title="About"
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_info_24"/>

    <item android:title="Log Out"
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_logout_24"/>
</menu>